// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Versioning should get lowest target versions 1`] = `
[
  {
    "parsedVersion": 7,
    "target": "node",
    "version": "7",
  },
  {
    "parsedVersion": 50.5,
    "target": "firefox",
    "version": "50.5",
  },
  {
    "parsedVersion": 20,
    "target": "chrome",
    "version": "20",
  },
]
`;

exports[`Versioning should support multi env config in browserslist package.json 1`] = `
[
  {
    "parsedVersion": 25,
    "target": "samsung",
    "version": "25",
  },
  {
    "parsedVersion": 18.2,
    "target": "safari",
    "version": "18.2",
  },
  {
    "parsedVersion": 114,
    "target": "opera",
    "version": "114",
  },
  {
    "parsedVersion": 80,
    "target": "op_mob",
    "version": "80",
  },
  {
    "parsedVersion": 0,
    "target": "op_mini",
    "version": "all",
  },
  {
    "parsedVersion": 2.5,
    "target": "kaios",
    "version": "2.5",
  },
  {
    "parsedVersion": 18.2,
    "target": "ios_saf",
    "version": "18.2",
  },
  {
    "parsedVersion": 10,
    "target": "ie_mob",
    "version": "10",
  },
  {
    "parsedVersion": 9,
    "target": "ie",
    "version": "9",
  },
  {
    "parsedVersion": 128,
    "target": "firefox",
    "version": "128",
  },
  {
    "parsedVersion": 135,
    "target": "edge",
    "version": "135",
  },
  {
    "parsedVersion": 112,
    "target": "chrome",
    "version": "112",
  },
  {
    "parsedVersion": 7,
    "target": "bb",
    "version": "7",
  },
  {
    "parsedVersion": 13.52,
    "target": "baidu",
    "version": "13.52",
  },
  {
    "parsedVersion": 138,
    "target": "android",
    "version": "138",
  },
  {
    "parsedVersion": 15.5,
    "target": "and_uc",
    "version": "15.5",
  },
  {
    "parsedVersion": 14.9,
    "target": "and_qq",
    "version": "14.9",
  },
  {
    "parsedVersion": 140,
    "target": "and_ff",
    "version": "140",
  },
  {
    "parsedVersion": 138,
    "target": "and_chr",
    "version": "138",
  },
]
`;

exports[`Versioning should support object config in rule option 1`] = `
[
  {
    "parsedVersion": 18.14,
    "target": "node",
    "version": "18.14.0",
  },
  {
    "parsedVersion": 70,
    "target": "chrome",
    "version": "70",
  },
]
`;

exports[`Versioning should support object config with ignore option in rule option 1`] = `
[
  {
    "parsedVersion": 18.14,
    "target": "node",
    "version": "18.14.0",
  },
]
`;

exports[`Versioning should support object config with query array in rule option 1`] = `
[
  {
    "parsedVersion": 18.14,
    "target": "node",
    "version": "18.14.0",
  },
  {
    "parsedVersion": 70,
    "target": "chrome",
    "version": "70",
  },
]
`;

exports[`Versioning should support resolving browserslist config in subdirectory 1`] = `
[
  {
    "parsedVersion": 70,
    "target": "chrome",
    "version": "70",
  },
]
`;

exports[`Versioning should support resolving browserslist config in subdirectory 2`] = `
[
  {
    "parsedVersion": 27,
    "target": "samsung",
    "version": "27",
  },
  {
    "parsedVersion": 18.4,
    "target": "safari",
    "version": "18.4",
  },
  {
    "parsedVersion": 116,
    "target": "opera",
    "version": "116",
  },
  {
    "parsedVersion": 80,
    "target": "op_mob",
    "version": "80",
  },
  {
    "parsedVersion": 0,
    "target": "op_mini",
    "version": "all",
  },
  {
    "parsedVersion": 2.5,
    "target": "kaios",
    "version": "2.5",
  },
  {
    "parsedVersion": 18.4,
    "target": "ios_saf",
    "version": "18.4",
  },
  {
    "parsedVersion": 128,
    "target": "firefox",
    "version": "128",
  },
  {
    "parsedVersion": 137,
    "target": "edge",
    "version": "137",
  },
  {
    "parsedVersion": 109,
    "target": "chrome",
    "version": "109",
  },
  {
    "parsedVersion": 138,
    "target": "android",
    "version": "138",
  },
  {
    "parsedVersion": 15.5,
    "target": "and_uc",
    "version": "15.5",
  },
  {
    "parsedVersion": 14.9,
    "target": "and_qq",
    "version": "14.9",
  },
  {
    "parsedVersion": 140,
    "target": "and_ff",
    "version": "140",
  },
  {
    "parsedVersion": 138,
    "target": "and_chr",
    "version": "138",
  },
]
`;

exports[`Versioning should support single array config in browserslist package.json 1`] = `
[
  {
    "parsedVersion": 25,
    "target": "samsung",
    "version": "25",
  },
  {
    "parsedVersion": 18.2,
    "target": "safari",
    "version": "18.2",
  },
  {
    "parsedVersion": 114,
    "target": "opera",
    "version": "114",
  },
  {
    "parsedVersion": 80,
    "target": "op_mob",
    "version": "80",
  },
  {
    "parsedVersion": 0,
    "target": "op_mini",
    "version": "all",
  },
  {
    "parsedVersion": 2.5,
    "target": "kaios",
    "version": "2.5",
  },
  {
    "parsedVersion": 18.2,
    "target": "ios_saf",
    "version": "18.2",
  },
  {
    "parsedVersion": 10,
    "target": "ie_mob",
    "version": "10",
  },
  {
    "parsedVersion": 9,
    "target": "ie",
    "version": "9",
  },
  {
    "parsedVersion": 128,
    "target": "firefox",
    "version": "128",
  },
  {
    "parsedVersion": 135,
    "target": "edge",
    "version": "135",
  },
  {
    "parsedVersion": 112,
    "target": "chrome",
    "version": "112",
  },
  {
    "parsedVersion": 7,
    "target": "bb",
    "version": "7",
  },
  {
    "parsedVersion": 13.52,
    "target": "baidu",
    "version": "13.52",
  },
  {
    "parsedVersion": 138,
    "target": "android",
    "version": "138",
  },
  {
    "parsedVersion": 15.5,
    "target": "and_uc",
    "version": "15.5",
  },
  {
    "parsedVersion": 14.9,
    "target": "and_qq",
    "version": "14.9",
  },
  {
    "parsedVersion": 140,
    "target": "and_ff",
    "version": "140",
  },
  {
    "parsedVersion": 138,
    "target": "and_chr",
    "version": "138",
  },
]
`;

exports[`Versioning should support string config in rule option 1`] = `
[
  {
    "parsedVersion": 27,
    "target": "samsung",
    "version": "27",
  },
  {
    "parsedVersion": 18.4,
    "target": "safari",
    "version": "18.4",
  },
  {
    "parsedVersion": 116,
    "target": "opera",
    "version": "116",
  },
  {
    "parsedVersion": 80,
    "target": "op_mob",
    "version": "80",
  },
  {
    "parsedVersion": 0,
    "target": "op_mini",
    "version": "all",
  },
  {
    "parsedVersion": 2.5,
    "target": "kaios",
    "version": "2.5",
  },
  {
    "parsedVersion": 18.4,
    "target": "ios_saf",
    "version": "18.4",
  },
  {
    "parsedVersion": 128,
    "target": "firefox",
    "version": "128",
  },
  {
    "parsedVersion": 137,
    "target": "edge",
    "version": "137",
  },
  {
    "parsedVersion": 109,
    "target": "chrome",
    "version": "109",
  },
  {
    "parsedVersion": 138,
    "target": "android",
    "version": "138",
  },
  {
    "parsedVersion": 15.5,
    "target": "and_uc",
    "version": "15.5",
  },
  {
    "parsedVersion": 14.9,
    "target": "and_qq",
    "version": "14.9",
  },
  {
    "parsedVersion": 140,
    "target": "and_ff",
    "version": "140",
  },
  {
    "parsedVersion": 138,
    "target": "and_chr",
    "version": "138",
  },
]
`;
